2011-11-20  Kaz Kylheku  <kaz@kylheku.com>

	Relaxing :vars in collect/coll a little bit.

	* match.c (h_coll, v_collect): Only throw an error about
	missing required variables if the collect iteration collected some new
	variables.  This allows strict collects with :vars to have
	some cases which explicitly match and skip unwanted material,
	without binding variables.  Also, print all missing variables in the
	diagnostic.

	* txr.1: Mention this special exception.

	* RELNOTES: Updated.

2011-11-19  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (tests/008/soundex.ok): New test case.
	(TXR_ARGS): Specified for new test case.

	* tests/008/soundex.expected: New file.

	* tests/008/soundex.txr: New file.

2011-11-19  Kaz Kylheku  <kaz@kylheku.com>

	* RELNOTES: New file.

2011-11-19  Kaz Kylheku  <kaz@kylheku.com>

	Bug #34866

	* match.c (h_skip): Bugfix. Return the length of the line if
	the skip is to the end of line, not the value t.

	* txr.1: Clarify that @var@(skip)text is useless.

2011-11-19  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_deffilter): Even better. Just evaluate
	the arguments individually. Now @(deffilter a b ..)
	is possible where these evaluate to suitable
	lists of strings.

	* txr.1: Documented.

2011-11-19  Kaz Kylheku  <kaz@kylheku.com>

	deffilter grows in power: it can take quasistrings.

	* lib.c (cdr_f): New global variable.
	(funcall1, funcall2, funcall3, funcall4): Fix unterminated
	arguments in uw_throwf call by using uw_throw instead.
	(do_or): New static function.
	(orf): New function.
	(obj_init): gc_protect and initialize cdr_f.

	* lib.h (cdr_f, orf): Declared.

	* match.c (v_deffilter): Treat the table as forms to be evaluated which
	must reduce to strings, rather than literal strings.

	* txr.1: Documented.

2011-11-19  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (yybadtoken): Use ~a to print bad character rather than #\
	notation.

2011-11-18  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y: Regression IDENT, '{' and '}'